// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleSettingsForm /> rendering should render a filled form when rule id after fetched 1`] = `Array []`;

exports[`<RuleSettingsForm /> rendering should render a filled form when rule id after fetched 2`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          New rule
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      id="rule-form"
    >
      <div
        class="form-group"
      >
        <label
          class="label labelName"
          for="ruleName"
        >
          Rule name
        </label>
        <div
          class="InputField form-group"
          color=""
        >
          <div
            class=""
          >
            <input
              aria-invalid="false"
              class="form-control"
              id="ruleName"
              type="text"
              value="New rule"
            />
          </div>
        </div>
        <label
          class="label"
          for="ruleDescription"
        >
          Rule description
        </label>
        <div
          class="InputField form-group"
          color=""
        >
          <div
            class=""
          >
            <textarea
              class="form-control"
              id="ruleDescription"
            />
          </div>
        </div>
      </div>
      <label
        class="label"
        for="ruleContainer"
      >
        Rule conditions
      </label>
      <div
        class="ruleContainer form-group"
        id="ruleContainer"
      >
        <div
          class="container"
        >
          <div
            class="whenBtn"
          >
            WHEN
          </div>
          <div
            class="MultiSelectField whenEvents"
          >
            <div
              class="container"
            >
              <span
                class="tag badge badge-secondary"
              >
                <span
                  class="tagText"
                >
                  ticket created
                </span>
                <i
                  class="material-icons ml-1 closeIcon"
                >
                  close
                </i>
              </span>
              <div
                class="inputContainer multiSelectOptionField-dropdown"
              >
                <div
                  class="dropdown"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class=""
                    data-toggle="dropdown"
                  >
                    <input
                      class="input"
                      placeholder="Add events..."
                      value=""
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    class="options dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <button
                      class="option option--focused dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket updated
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket assigned to user
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket snooze delay ends
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        new message in ticket
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Program-wrapper"
        >
          <div
            class="consequent"
          >
            <span
              class=""
            >
              <div
                class="AddActionOrIfStatement btn-group"
                style="padding-left: 0px;"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ControlStructureButton dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  THEN
                </button>
                <div
                  class="d-inline-block text-danger ml-2"
                >
                  THEN
                   cannot be empty
                </div>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Action
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    "IF" statement
                  </button>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toggleButtonContainer"
      >
        <span>
          <div>
            <label
              aria-checked="true"
              class="label container"
              for="toggle-button-9"
              role="switch"
            >
              <input
                checked=""
                class="input"
                disabled=""
                id="toggle-button-9"
                name="toggle-button-9"
                type="checkbox"
              />
              <div
                class="slider"
              />
              <div
                class="label"
              />
            </label>
          </div>
        </span>
        <span>
          <label
            class="toggleLabel mr-2"
          >
            Enable rule
          </label>
        </span>
      </div>
      <div
        class="buttons-container"
      >
        <div>
          <button
            class="wrapper primary medium"
            form="rule-form"
            id="rule-item-save"
            type="button"
          >
            Update rule
          </button>
          <button
            class="wrapper ml-3 secondary medium"
            id="rule-item-duplicate"
            type="submit"
          >
            Duplicate rule
          </button>
        </div>
        <div>
          <button
            class="wrapper destructive medium"
            id="rule-item-delete"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete rule
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="wrapper card"
    >
      <div
        class="header card-header"
      >
        <div
          class="title"
        >
          List of tickets triggering the rule
        </div>
        <div
          class="toggle"
        >
          <span
            class="material-icons ml-2"
          >
            keyboard_arrow_down
          </span>
        </div>
      </div>
      <div
        class="body card-body"
      >
        <div
          class="container"
        >
          <div
            class="inner"
            style="min-height: 60px;"
          >
            <i
              class="icon-custom icon-circle-o-notch md-spin"
              style="font-size: 40px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="navigation"
    />
  </div>
</div>
`;

exports[`<RuleSettingsForm /> rendering should render a loader when rule id before fetched 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          New rule
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      id="rule-form"
    >
      <div
        class="form-group"
      >
        <label
          class="label labelName"
          for="ruleName"
        >
          Rule name
        </label>
        <div
          class="InputField form-group"
          color=""
        >
          <div
            class=""
          >
            <input
              aria-invalid="false"
              class="form-control"
              id="ruleName"
              type="text"
              value="New rule"
            />
          </div>
        </div>
        <label
          class="label"
          for="ruleDescription"
        >
          Rule description
        </label>
        <div
          class="InputField form-group"
          color=""
        >
          <div
            class=""
          >
            <textarea
              class="form-control"
              id="ruleDescription"
            />
          </div>
        </div>
      </div>
      <label
        class="label"
        for="ruleContainer"
      >
        Rule conditions
      </label>
      <div
        class="ruleContainer form-group"
        id="ruleContainer"
      >
        <div
          class="container"
        >
          <div
            class="whenBtn"
          >
            WHEN
          </div>
          <div
            class="MultiSelectField whenEvents"
          >
            <div
              class="container"
            >
              <span
                class="tag badge badge-secondary"
              >
                <span
                  class="tagText"
                >
                  ticket created
                </span>
                <i
                  class="material-icons ml-1 closeIcon"
                >
                  close
                </i>
              </span>
              <div
                class="inputContainer multiSelectOptionField-dropdown"
              >
                <div
                  class="dropdown"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class=""
                    data-toggle="dropdown"
                  >
                    <input
                      class="input"
                      placeholder="Add events..."
                      value=""
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    class="options dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <button
                      class="option option--focused dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket updated
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket assigned to user
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket snooze delay ends
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        new message in ticket
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Program-wrapper"
        >
          <div
            class="consequent"
          >
            <span
              class=""
            >
              <div
                class="AddActionOrIfStatement btn-group"
                style="padding-left: 0px;"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ControlStructureButton dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  THEN
                </button>
                <div
                  class="d-inline-block text-danger ml-2"
                >
                  THEN
                   cannot be empty
                </div>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Action
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    "IF" statement
                  </button>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toggleButtonContainer"
      >
        <span>
          <div>
            <label
              aria-checked="true"
              class="label container"
              for="toggle-button-6"
              role="switch"
            >
              <input
                checked=""
                class="input"
                disabled=""
                id="toggle-button-6"
                name="toggle-button-6"
                type="checkbox"
              />
              <div
                class="slider"
              />
              <div
                class="label"
              />
            </label>
          </div>
        </span>
        <span>
          <label
            class="toggleLabel mr-2"
          >
            Enable rule
          </label>
        </span>
      </div>
      <div
        class="buttons-container"
      >
        <div>
          <button
            class="wrapper primary medium"
            form="rule-form"
            id="rule-item-save"
            type="button"
          >
            Update rule
          </button>
          <button
            class="wrapper ml-3 secondary medium"
            id="rule-item-duplicate"
            type="submit"
          >
            Duplicate rule
          </button>
        </div>
        <div>
          <button
            class="wrapper destructive medium"
            id="rule-item-delete"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete rule
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="wrapper card"
    >
      <div
        class="header card-header"
      >
        <div
          class="title"
        >
          List of tickets triggering the rule
        </div>
        <div
          class="toggle"
        >
          <span
            class="material-icons ml-2"
          >
            keyboard_arrow_down
          </span>
        </div>
      </div>
      <div
        class="body card-body"
      >
        <div
          class="container"
        >
          <div
            class="inner"
            style="min-height: 60px;"
          >
            <i
              class="icon-custom icon-circle-o-notch md-spin"
              style="font-size: 40px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="navigation"
    />
  </div>
</div>
`;

exports[`<RuleSettingsForm /> rendering should render an empty form when no rule id 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add rule
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      id="rule-form"
    >
      <div
        class="form-group"
      >
        <label
          class="label labelName"
          for="ruleName"
        >
          Rule name
        </label>
        <div
          class="InputField form-group"
          color=""
        >
          <div
            class=""
          >
            <input
              aria-invalid="false"
              class="form-control"
              id="ruleName"
              type="text"
              value="New rule"
            />
          </div>
        </div>
        <label
          class="label"
          for="ruleDescription"
        >
          Rule description
        </label>
        <div
          class="InputField form-group"
          color=""
        >
          <div
            class=""
          >
            <textarea
              class="form-control"
              id="ruleDescription"
            />
          </div>
        </div>
      </div>
      <label
        class="label"
        for="ruleContainer"
      >
        Rule conditions
      </label>
      <div
        class="ruleContainer form-group"
        id="ruleContainer"
      >
        <div
          class="container"
        >
          <div
            class="whenBtn"
          >
            WHEN
          </div>
          <div
            class="MultiSelectField whenEvents"
          >
            <div
              class="container"
            >
              <span
                class="tag badge badge-secondary"
              >
                <span
                  class="tagText"
                >
                  ticket created
                </span>
                <i
                  class="material-icons ml-1 closeIcon"
                >
                  close
                </i>
              </span>
              <div
                class="inputContainer multiSelectOptionField-dropdown"
              >
                <div
                  class="dropdown"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class=""
                    data-toggle="dropdown"
                  >
                    <input
                      class="input"
                      placeholder="Add events..."
                      value=""
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    class="options dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <button
                      class="option option--focused dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket updated
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket assigned to user
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        ticket snooze delay ends
                      </span>
                    </button>
                    <button
                      class="option dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      <span>
                        new message in ticket
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Program-wrapper"
        >
          <div
            class="consequent"
          >
            <span
              class=""
            >
              <div
                class="AddActionOrIfStatement btn-group"
                style="padding-left: 0px;"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ControlStructureButton dropdown-toggle btn btn-secondary"
                  type="button"
                >
                  THEN
                </button>
                <div
                  class="d-inline-block text-danger ml-2"
                >
                  THEN
                   cannot be empty
                </div>
                <div
                  aria-hidden="true"
                  class="dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Action
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    "IF" statement
                  </button>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toggleButtonContainer"
      >
        <span>
          <div>
            <label
              aria-checked="true"
              class="label container"
              for="toggle-button-3"
              role="switch"
            >
              <input
                checked=""
                class="input"
                disabled=""
                id="toggle-button-3"
                name="toggle-button-3"
                type="checkbox"
              />
              <div
                class="slider"
              />
              <div
                class="label"
              />
            </label>
          </div>
        </span>
        <span>
          <label
            class="toggleLabel mr-2"
          >
            Enable rule
          </label>
        </span>
      </div>
      <div
        class="buttons-container"
      >
        <div>
          <button
            class="wrapper primary medium"
            form="rule-form"
            id="rule-item-save"
            type="button"
          >
            Create rule
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
